--- a/server/package.json
+++ b/server/package.json
@@ -1,41 +1,26 @@
 {
-	"name": "Labs8-RateMyDIY",
-	"version": "1.0.0",
-	"main": "index.js",
-	"repository": "https://github.com/Lambda-School-Labs/Labs8-RateMyDIY.git",
-	"author": [
-		"Michael Agard <https://github.com/michaelagard>",
-		"David Benavidez <https://github.com/DavidBenavidez123>",
-		"Max Kajiwara <https://github.com/maxkajiwara>",
-		"Alejandro Krasovsky <https://github.com/alejandrok93>",
-		"Tristen Neu <https://github.com/tristenneu>"
-	],
-	"license": "MIT",
-	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js",
-		"test": "jest --watch --verbose"
-	},
-	"jest": {
-		"testEnvironment": "node"
-	},
-	"dependencies": {
-		"connect-ensure-login": "^0.1.1",
-		"cookie-parser": "^1.4.3",
-		"cors": "^2.8.5",
-		"dotenv": "^6.1.0",
-		"express": "^4.16.4",
-		"express-session": "^1.15.6",
-		"helmet": "^3.14.0",
-		"knex": "^0.15.2",
-		"morgan": "^1.9.1",
-		"passport": "^0.4.0",
-		"passport-auth0": "^1.1.0",
-		"sqlite3": "^4.0.3",
-		"mssql": "4.1.0"
-	},
-	"devDependencies": {
-		"jest": "^23.6.0",
-		"nodemon": "^1.18.4"
-	}
+  "name": "lambda-notes-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/alejandrok93/lambda-notes-backend.git",
+  "author": "alejandrok93 <alejandrok93@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "helmet": "^3.14.0",
+    "jsonwebtoken": "^8.3.0",
+    "knex": "^0.15.2",
+    "pg": "^7.6.0",
+    "sqlite3": "^4.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.5"
+  }
 }
